--- a/Company assignment/styles.css
+++ b/Company assignment/styles.css
@@ -8,73 +8,75 @@ body {
     align-items: center;
 }
 
+#images{
+    border: 0px;
+    border-radius: 4px;
+}
+#photo_design{
+    position: relative;
+    height: 600px;
+    margin-bottom: 60px;
+}
+#photo_text{
+    position: absolute;
+    width: 60%;
+    top: 25%;
+    left: 40%;
+    color: rgb(191, 124, 1);
+    font-size: 70px;
+    text-shadow: 1px 5px 6px darkgray;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#image2{
+    width: 1518px;
+}
+
 
 #main_container{
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 75%;
-    background-image: url(./image5.jpeg);
-    background-position-y: center ;
-    background-size: cover;
-    padding: 30px 50px 20px 50px;
-}
-#images{
-    border: 0px;
-    border-radius: 4px;
-}
-.image2{
-    margin: 20px;
-    border: 2px solid black;
+    width: 100%;
+    margin: 0;
 }
 
-
-#second_container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    width: 75%;
-    padding: 30px 50px 20px 50px;
+#logo{
+    width: 100px;
+    height: 70px;
+    margin-left: 200px;
+    margin-right: 60px;
+    border: 2px solid orange;
+    border-radius: 20px;
 }
-
-#heading {
-    background-color: rgb(255, 183, 0);
-    padding: 10px 50px 10px 50px;
-    font-family:'Courier New', Courier, monospace;
-    color: rgb(91, 80, 0);
-    border: 0;
-    border-radius: 10px;
-    
-}
-
-#sub_heading{
-    font-family:'Courier New', Courier, monospace;
-    padding: 10px 50px 10px 50px;
-    background-color: bisque;
-    border-radius: 8px;
-}
-
 
 #nav_bar {
-    background-color: rgb(255, 183, 0);
+    display: flex;
+    background-color: rgb(209, 206, 206);
     width: 100%;
-    padding: 8px 0px 8px 0px ;
+    padding: 15px 0px 15px 0px ;
     border: 0;
-    border-radius: 8px;
 }
 
 
 #nav{
-    width: 30%;
+    height: 10px;
+    width: 36%;
     display: flex;
     justify-content:space-around;
     font-weight: bold;
     font-size: large;
+    padding-top: 20px;
     
 }
+#search_icon{
+}
 
+#search_icon:hover{
+    color: white;
+    text-shadow: 2px 2px 3px rgb(120, 79, 3);
+}
 #home{
     color: white;
     padding: 4px 6px 4px 6px;
@@ -122,14 +124,37 @@ body {
 }
 
 #highlights{
-    width: 450px;
+    display: flex;
+    width: 1000px;
     text-align: justify;
     border: 0;
     border-radius: 10px;
     padding: 30px;
-    box-shadow: 0px 1px 10px 0.5px rgb(118, 103, 72);
-    background-color: rgb(233, 231, 226);
+    box-shadow: 0px 1px 8px 0.1px rgb(118, 103, 72);
+    background-color: white;
 }
+
+#photo{
+    width: 400px;
+    height: 350px;
+    margin-right: 50px;
+}
+#highlight_heading1{
+    margin-bottom: 10px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+#highlight_heading2{
+    font-family: Poppins, sans-serif;
+    font-weight: 800;
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+
+.highlight_text{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(51,51,51);
+}
+
 
 #sub_headind1{
     font-size: 25px;
