--- a/Company assignment/styles.css
+++ b/Company assignment/styles.css
@@ -53,10 +53,10 @@ body {
 
 #nav_bar {
     display: flex;
-    background-color: rgb(209, 206, 206);
     width: 100%;
     padding: 15px 0px 15px 0px ;
     border: 0;
+    box-shadow: 0px 3px 25px 0.5px rgb(174, 173, 173);
 }
 
 
@@ -157,29 +157,112 @@ body {
 
 
 #sub_headind1{
-    font-size: 25px;
-    line-height: 50px;
+    text-align: center;
+    font-family: Poppins, sans-serif;
+    font-weight: 800;
+    font-size: 40px;
+    color: white;
+    margin-top: 50px;
+    margin-bottom: 20px;
 }
 
-#list_heading{
+#about_section{
+    position: relative;
+    background-image: url(./teamimage1.jpg);
+    background-size: cover;
+    margin-top: 30px;
+    width: 100%;
+}
+
+
+#services{
+    width: 100%;
+    background-color: rgb(232, 229, 229);
+    height: 720px;
+}
+
+#our_services{
+    display: flex;
+    justify-content: center;
+    
+}
+
+#main_heading{
+    text-align: center;
+    font-family: Poppins, sans-serif;
+    font-weight: 800;
+    font-size: 40px;
+    color: rgb(51,51,51);
+}
+
+#services_heading1{
+    margin-bottom: 10px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 50px;
+}
+
+#serices_cards{
+    width: 70%;
+    /* background-color: brown; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+    padding: 50px;
+    
+}
+
+.services_card1{
+    width: 31%;
+    background-color: white;
+    box-shadow: 0px 0px 2px 1px rgb(181, 166, 138);
+    height: 220px;
+    position: relative;
+}
+.icon1{
+    width:100%;
+    height: 100%;
+    
+}
+.services_text{
+    position: absolute;
+    width: 100%;
+    height: 40px;
+    bottom: 0;
+    background-color: white;
+    padding-top: 20px;
+}
+
+.services_heading{
     font-size: 20px;
-    line-height: 40px;
+    font-weight: bold;
 }
-.list{
-    margin-left: 30px;
-    font-size: 18px;
-    line-height: 30px;
-}
+
+
 #para{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align:justify;
     font-size: 18px;
     padding: 20px 50px 50px 50px;
     line-height: 30px;
+    color: white;
+    text-align: center;
 }
 
 #image1{
     width: 1239px;
+}
+
+#sub_heading3{
+    font-family: Poppins, sans-serif;
+    font-size: 40px;
+    font-weight: 800;
+    margin-top: 50px;
+    
+}
+#team{
+    width: 100%;
+    background-color: rgb(232, 229, 229);
 }
 
 #cards{
@@ -187,6 +270,7 @@ body {
     gap: 40px;
     width: 1120px;
     padding: 50px;
+    margin-left: 150px;
 }
 .card1 {
     display: flex;
@@ -217,7 +301,7 @@ body {
 #contact_form{
     display: flex;
     flex-direction: column;
-    width: 45%;
+    width: 30%;
     height: 540px;
     text-align: left;
     border: 0 px;
@@ -228,7 +312,12 @@ body {
 }
 
 #heading3{
-    padding: 20px;
+    text-align: center;
+    font-family: Poppins, sans-serif;
+    font-weight: 800;
+    font-size: 40px;
+    color: rgb(51,51,51);
+    margin: 50px;
 }
 
 
@@ -243,13 +332,16 @@ body {
     border-radius: 10px;
     box-shadow: 0px 1px 10px 0.5px rgb(118, 103, 72);
     background-color: rgb(233, 231, 226);
-    padding: 10px;
+    padding: 30px;
+    color: rgb(51,51,51);
+    margin-bottom: 150px;
+    margin-top: 100px;
 }
 
 #form{
     display: flex;
     flex-direction: column;
-    padding: 25px;
+    padding: 30px;
 }
 
 #name,#email,#mobile,#message_field,#address{
@@ -265,7 +357,7 @@ body {
 
 #message_field1{
     height: 100px;
-    width: 450px;
+    width: 98%;
     border-radius: 8px;
     font-size: 16px;
     padding: 5px;
@@ -296,6 +388,17 @@ body {
     border-radius: 5px;
     font-size: 16px;
     background-color: rgb(219, 101, 5);
+}
+
+#footer{
+    height: 80px;
+    background-color: rgb(21,27,30);
+    width: 100%;
+}
+#footer_text{
+    padding: 35px;
+    color: white;
+    font-size: 18px;
 }
 
 
