--- a/Company assignment/styles.css
+++ b/Company assignment/styles.css
@@ -277,7 +277,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 45%;
-    height: 200px;
+    height: fit-content;
     text-align:left;
     border: 0;
     border-radius: 10px;
@@ -294,8 +294,12 @@ body {
 }
 
 .photo{
-    width: 80px;
-    height: 80px;
+    width: 100%;
+    height: 100%;
+}
+.photo1{
+    width: 100%;
+    height: 100%;
 }
 
 #contact_form{
