--- a/Company assignment/styles.css
+++ b/Company assignment/styles.css
@@ -68,19 +68,21 @@ body {
     font-weight: bold;
     font-size: large;
     padding-top: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: gray;
     
 }
 #search_icon{
 }
 
 #search_icon:hover{
-    color: white;
-    text-shadow: 2px 2px 3px rgb(120, 79, 3);
+    color: orange;
+    text-shadow: 1px 1px 1px rgb(120, 79, 3);
 }
 #home{
-    color: white;
+    color: orange;
     padding: 4px 6px 4px 6px;
-    text-shadow: 2px 2px 3px rgb(120, 79, 3);
+    text-shadow: 1px 1px 1px rgb(120, 79, 3);
     text-decoration: none;
 }
 
@@ -95,15 +97,15 @@ body {
     text-decoration: none;
 }
 #about1{
-    color: white;
+    color: orange;
     padding: 4px 6px 4px 6px;
-    text-shadow: 2px 2px 3px rgb(120, 79, 3);
+    text-shadow: 1px 1px 1px rgb(120, 79, 3);
     text-decoration: none;
 }
 #contact1{
-    color: white;
+    color: orange;
     padding: 4px 6px 4px 6px;
-    text-shadow: 2px 2px 3px rgb(120, 79, 3);
+    text-shadow: 1px 1px 1px rgb(120, 79, 3);
     text-decoration: none;
 }
 #contact {
@@ -112,8 +114,8 @@ body {
     text-decoration: none;
 }
 #about:hover,#contact:hover,#home1:hover {
-    color: white;
-    text-shadow: 2px 2px 3px rgb(120, 79, 3);
+    color: orange;
+    text-shadow: 1px 1px 1px rgb(120, 79, 3);
     padding: 4px 6px 4px 6px;
     text-decoration: none;
 }
